# picam

./: .gitignore  .gitmodules  Makefile  README.md  design.md  schema.sql
display/: CMakeLists.txt  README.md  VideoPlayer.qml  VideoSource.cpp  VideoSource.hpp  icons.qrc  main.cpp  main.qml  qml.qrc  toolbar.ui
display/icons/: icons.qrc
display/icons/tango/: README.md  index.theme
include/: camera.hpp  camera_config.hpp  encoder_config.hpp
pipeline/cpp/: Makefile
pipeline/cpp/src/: client.cpp  server.cpp
processing/: add_frames.py  blobs.py  bright_spots.py  delete_stored_images.sql  download_images.py  median_filter.py  process.py  process_png.py  show_unprocessed.py  threshold.py
proto/: Makefile  picam.proto
receiver/: .gitignore  Makefile  activate  receiver.go  receiver_test.go
receiver/src/picam/: .gitignore
sensor/: Makefile
sensor/include/: camera.hpp  camera_config.hpp
sensor/proto/: .gitignore
sensor/src/: camera.cpp  encoder_config.cpp  main.cpp
src/: camera.cpp  encoder_config.cpp  main.cpp
tools/png2fits/: .gitignore  go.mod  go.sum  png2fits.go
